# numpy-like

./: .clang-format  .clangd  .gitignore  meson.build  pyproject.toml
numpy_like/: __init__.py  __init__.pyi  meson.build
numpy_like/_core/: __init__.py  meson.build
numpy_like/_core/include/: array_coercion.h  errors.h  ndarray_types.h
numpy_like/_core/multiarray/: array_coercion.c  multiarray.c  ndarray_types.c
numpy_like/core/: array_coercion.c  ndarray_types.c
numpy_like/core/include/: array_coercion.h  ndarray_types.h
src/: numpy_like.c
src/core/: ndarray_objects.h  ndarray_types.c
src/core/include/: ndarray_objects.h  ndarray_types.h
test/: test.py  test_creation.py  test_methods.py
